--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,6 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: ec2-roshan
-          template: test-stack.yaml
+          template: ec2.yaml
           no-fail-on-empty-changeset: "1"
           parameter-overrides: file://${{ github.workspace }}/variables.json
